--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+node_modules/
+www/
+.idea/
+.vscode/
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
